--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    font-family: 'Domine', serif;
 }
 .fix{
     position: fixed;
@@ -10,8 +11,82 @@
 
 
 /*modal*/
+.popup .overlay{
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100vw;
+    height: 100vh;
+    background: rgba(0, 0, 0, 0.52);
+    z-index: 1;
+    display: none;
+}
+.popup .content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    background: #ffffff;
+    width: 600px;
+    height: 600px;
+    z-index: 2;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 20px;
+}
 
+.popup .close-btn{
+    position: absolute;
+    right: 20px;
+    width: 30px;
+    height: 30px;
+    background: #222;
+    color: #FFF;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 50%;
+    cursor: pointer;
+}
 
+.popup.active .overlay{
+    display: block;
+}
+
+.popup.activePOP .content{
+    transition: all 300ms ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+
+#img1in{
+    width: 400px;
+    border-radius: 2%;
+    box-shadow: 2px 2px 20px #000000;
+    margin-top: 60px;
+}
+#img2in{
+    width: 200px;
+    border-radius: 2%;
+    box-shadow: 2px 2px 20px #000000;
+    margin-top: 60px;
+}
+#img3in{
+    width: 200px;
+    border-radius: 2%;
+    box-shadow: 2px 2px 20px #000000;
+    margin-top: 60px;
+}
+#img4in{
+    width: 150px;
+    border-radius: 2%;
+    box-shadow: 2px 2px 20px #000000;
+    margin-top: 60px;
+}
+#contImg1{
+    margin-top: 100px;
+}
 
 
 
