--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     display: none;
 }
 .popup .content{
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(0);
@@ -149,7 +149,7 @@
 .sec1_j{
     background-color: rgba(186, 186, 186, 0.442);
     width: 100%;
-    height: 150vh;
+    height: 155vh;
 }
 .panel{
     height: 0; overflow: hidden;
