--- a/style.css
+++ b/style.css
@@ -99,13 +99,15 @@
     box-shadow: 2px 2px 20px #000000;
 }
 
+
 /*-- MEDIA DEVICE --*/
 
 /*telefono*/
 @media (max-width: 1002px) {
     #logo{
-        width: 40vh;
+        width: 30vh;
     }
+    /*fare scroll immagini verso sinistra e destra*/
     #foto{
         width: 0%;
         height: 0%;
@@ -117,9 +119,20 @@
         margin-top: -10px;
     }
     .socialButton{
-        width: 40vh;
+        width: 25vh;
         margin-top: 10px;
     }
+                /*scroll img*/
+                .scrollin{
+                    padding-left: 60vh;
+                }
+                .sc2{
+                    width: 0px;
+                    margin-left: -55vh;
+                    margin-right: 30vh;
+                    z-index: 1;
+                }
+
 }
 
 
@@ -143,4 +156,94 @@
 }
 #firma2{
     height: 0%;
+}
+
+/*slide----------------------------------------------*/
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
 }
