--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .center{ 
     display: flex;
-   align-items: center;
-   justify-content: center;
+    align-items: center;
+    justify-content: center;
     text-align: center
 }
 
