--- a/styleform.css
+++ b/styleform.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
 .form1{
     margin-top: 10vh;
     margin-left: 20vh;
@@ -34,6 +39,7 @@
     border: solid 2px;
     width: 100%;
     height: 100px;
+    margin-top: 10px;
     padding: 12px 20px;
     box-sizing: border-box;
     border-radius: 4px;
@@ -54,8 +60,7 @@
 }
 .borderyes{
     border-bottom: 2px solid rgb(4, 255, 0);
-    background-color: rgba(6, 208, 6, 0.581);
-    
+    background-color: rgba(6, 208, 6, 0.581);  
 }
 
 #backBtn{
@@ -65,4 +70,56 @@
     height: 5vh;
     border-radius: 10px;
     text-decoration: none;
+}
+
+/*-- MEDIA DEVICE --*/
+
+/*telefono*/
+@media (max-width: 1002px) {
+    .form1{
+        margin-top: 10vh;
+        margin-left: 15vh;
+        width: 20vh;
+    }
+    #name-3b9a{
+        border: solid 2px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        background-color: #ffffff53;
+        margin-left: -5vh;
+    }
+    #email-3b9a{
+        border: solid 2px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        background-color: #ffffff53;
+        margin-left: -5vh;
+    }
+    #message-3b9a{
+        border: solid 2px;
+        width: 25vh;
+        height: 100px;
+        margin-left: -5vh;
+        padding: 12px 20px;
+        box-sizing: border-box;
+        border-radius: 4px;
+        background-color: #ffffff53;
+        resize: none;
+        border-radius: 10px;
+    }
+    .submit_Button{
+        width: 20vh;
+        height: 5vh;
+        border-radius: 10px;
+        margin-left: -5vh;
+        border: none;
+    }
+    #backBtn{
+        margin-left: 10vh;
+        margin-top: 5vh;
+        width: 20vh;
+        height: 5vh;
+        border-radius: 10px;
+        text-decoration: none;
+    }
 }
