--- a/style.css
+++ b/style.css
@@ -172,9 +172,14 @@
         font-size: 0%;
     }
     #scopri{
-        height: 0%;
-        width: 0%;
-        font-size: 0%;
+        width: 0px;
+        height: 0px;
+        font-size: 0px;
+    }
+    #storia{
+        width: 0px;
+        height: 0px;
+        font-size: 0px;
     }
 
 }
