--- a/style.css
+++ b/style.css
@@ -290,3 +290,6 @@ img {vertical-align: middle;}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+
+/*regalo*/
