--- a/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google_Sheet.css
+++ b/348h76teusvad/1092a7365e87dm/7634992hj98746/987364nbsfej'089/so03542793hdhdiweyu/awduho8743537/Google_Sheet.css
@@ -1,7 +1,4 @@
 
-  
-
-
 *{
 	box-sizing: border-box;
 	padding: 0;
@@ -14,6 +11,7 @@ body{
 	padding: 50px 50px 50px 50px;
 	align-items: center;
 	justify-content: center;
+	background-color: black;
 }
 
 .center{ 
